// Copyright(c) 2020 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

package org.lfedge.eve.uuid;

option go_package  = "github.com/lf-edge/eve/api/go/uuid";
option java_package = "org.lfedge.eve.uuid";
option java_multiple_files = true;
option java_outer_classname = "EveUuid";

message UuidRequest {
}

//Â This is the response payload for POST /api/v2/edgeDevice/uuid
// The message is assumed to be protected by signing envelope
message UuidResponse{
  string uuid = 1;             //UUID of this edge device
  string manufacturer = 2;     //Manufacturer, as per Controller
  string product_name = 3;     //Product name, as per Controller
}

